--- a/estilos/style.css
+++ b/estilos/style.css
@@ -13,8 +13,8 @@
 header{
     display:flex;
     background-image: linear-gradient(to right,var(--azulclaro),var(--azulescuro));
-    padding: 20px;
-    width: 100%;
+    width: 100vw;
+    padding: 10px 0px;
 }
 
 .titulo{
@@ -23,45 +23,28 @@ header{
 }
 
 header img{
-    width: 18px;
-    border-radius: 10px;
-    margin-left: 30px;
+    width: 35px;
+    border-radius: 50%;
+    margin-right: 5px;
 }
 
 nav{
-    width: 100%;
+    width: 100vw;
     display: flex;
     justify-content: flex-end;
     
 }
 
-.navbar{
-    display: flex;
-    align-items: center;
-}
-
-.navbar a{
-    color: white;
-    margin-left: 2px;
-    text-decoration: none;
-    display: inline ;
-}
-
 .navbar a:hover{
-    background-color: cornflowerblue;
-    padding: 2px;
-    transition: 0.5s;
-}
-
-body{
-    background-color: aliceblue;
+    transition: 0.3s;
+    transform: translate(-2px, -2px);
+    border-radius: 50%;
 }
 
 main{
-    width: 80%;
+    width:100vw;
     height: 100vh;
-    margin: auto;
-    background-color: rgb(33, 33, 33);
+    background-color: #262626
 }
 
 .perfil{
@@ -74,6 +57,7 @@ main{
 .perfil img{
     width: 200px;
     border-radius:50%;
+    border: solid 2px white;
     margin-left: 100px;
     margin-top: 50px;
 }
@@ -83,8 +67,30 @@ main{
     margin-top: 50px;
 }
 
+h2{
+    color: #9c9c9c;
+}
+
 .projetos{
-    display: flex;
-    width: 100%;
+    display: block;
+}
+
+.botoes{
+    display: grid;
     justify-content: center;
+}
+
+button{
+    width: 500px;
+    height: 50px;
+    border-radius: 30px;
+    border: solid 5px var(--dourado) ;
+    background-color: transparent;
+    color: var(--dourado);
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 17px;
+
+}
+a :hover{
+    cursor: pointer;
 }
